changed to a plainer font for readability and fixed a bthat prevented going back to tags

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,8 +1,8 @@
 @import 'bootstrap/scss/bootstrap';
 
 body {
-	font-family: 'Fraunces', serif;
-	font-size: 16px;
+	font-family: 'Source Sans Pro', sans-serif;
+  font-size: 18px;
 }
 
 .sidenav {
